<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_find_devices"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="start|center"
            android:paddingStart="@dimen/grid_2"
            android:paddingEnd="@dimen/grid_2"
            android:text="@string/find_devices"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.Loudcar.Subtitle1"
            android:textColor="@color/grey"
            app:icon="@drawable/ic_round_keyboard_arrow_right_24"
            app:iconGravity="end"
            app:iconTint="@color/grey" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_text_animation"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="start|center"
            android:paddingStart="@dimen/grid_2"
            android:paddingEnd="@dimen/grid_2"
            android:text="@string/text_animation"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.Loudcar.Subtitle1"
            android:textColor="@color/grey"
            app:icon="@drawable/ic_round_keyboard_arrow_right_24"
            app:iconGravity="end"
            app:iconTint="@color/grey" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_font_style"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="start|center"
            android:paddingStart="@dimen/grid_2"
            android:paddingEnd="@dimen/grid_2"
            android:text="@string/font_style"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.Loudcar.Subtitle1"
            android:textColor="@color/grey"
            app:icon="@drawable/ic_round_keyboard_arrow_right_24"
            app:iconGravity="end"
            app:iconTint="@color/grey" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_effects"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="start|center"
            android:paddingStart="@dimen/grid_2"
            android:paddingEnd="@dimen/grid_2"
            android:text="@string/effects"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.Loudcar.Subtitle1"
            android:textColor="@color/grey"
            app:icon="@drawable/ic_round_keyboard_arrow_right_24"
            app:iconGravity="end"
            app:iconTint="@color/grey" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/settings_reset_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/grid_3"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:text="@string/reset_all"/>
    </LinearLayout>
</layout>