<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="position"
            type="Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/grid_2">

        <ImageView
            android:id="@+id/intro_illustration_1"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:src="@{position == 0 ? @drawable/control_with_voice_illustration : (position == 1 ? @drawable/connect_easily_illustration : @drawable/set_manually_illustration)}"
            app:layout_constraintBottom_toTopOf="@+id/intro_1_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:srcCompat="@drawable/control_with_voice_illustration" />

        <TextView
            android:id="@+id/intro_1_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/grid_2"
            android:gravity="center"
            android:text="@{position == 0 ? @string/control_with_voice : (position == 1 ? @string/connect_easily : @string/set_manually)}"
            android:textAppearance="?textAppearanceHeadline6"
            android:textColor="?colorSecondary"
            app:layout_constraintBottom_toTopOf="@+id/intro_1_summary"
            app:layout_constraintTop_toBottomOf="@+id/intro_illustration_1"
            tools:text="@string/control_with_voice" />

        <TextView
            android:id="@+id/intro_1_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/grid_3"
            android:layout_marginTop="@dimen/grid_1"
            android:gravity="center"
            android:visibility="gone"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintBottom_toTopOf="@+id/skip_button"
            app:layout_constraintTop_toBottomOf="@+id/intro_1_title"
            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skip_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/grid_3"
            android:layout_marginBottom="?actionBarSize"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textAppearance="?textAppearanceButton"
            android:textColor="?colorControlNormal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/grid_3"
            android:layout_marginBottom="?actionBarSize"
            android:drawableLeft="@drawable/next_button_icon"
            android:paddingStart="@dimen/grid_2"
            android:paddingTop="@dimen/grid_1_5"
            android:paddingEnd="@dimen/grid_2"
            android:paddingBottom="@dimen/grid_1_5"
            android:text="@{position &lt; 2 ? @string/next: @string/proceed}"
            android:textAllCaps="false"
            android:textAppearance="?textAppearanceButton"
            android:textColor="?colorSecondary"
            app:elevation="@dimen/grid_0_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearance="@style/ShapeAppearance.Loudcar.Round"
            tools:text="@string/next" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>